--- a/src/components/Layout/Navigation/Menu/Submenu/Submenu.module.scss
+++ b/src/components/Layout/Navigation/Menu/Submenu/Submenu.module.scss
@@ -33,7 +33,10 @@
         }
 
         .box {
+            background-color: $tertiary;
             position: absolute;
+            border-radius: 0 1dvh 1dvh 1dvh;
+            width: 22.5rem;
             padding: 1rem;
             &::after {
                 display: none;
