--- a/src/components/Layout/Navigation/Menu/Item/Item.module.scss
+++ b/src/components/Layout/Navigation/Menu/Item/Item.module.scss
@@ -25,7 +25,7 @@
     height: 3.5rem;
     & > a {
         @include flex(center, center);
-        @include font(2.2rem, 400, null, uppercase, -1px, center);
+        @include font(2.2rem, 400, null, uppercase, -0.5px, center);
         @include itemAnimate();
         padding: 0rem 1rem;
     }
@@ -49,7 +49,7 @@
     height: minmax(3rem, auto);
     & > a {
         @include flex(center, center);
-        @include font(1.9rem, 400, null, uppercase, -1px, start);
+        @include font(1.9rem, 400, 1.3, uppercase, -1px, start);
         padding: 0.45rem;
     }
 }
@@ -81,7 +81,6 @@
     @media (min-width: 900px) {
         .expand,
         .regural {
-            background: violet;
             height: 2.55rem;
             & > a {
                 font-size: 1.75rem;
@@ -96,10 +95,10 @@
         }
 
         .submenu {
-            height: minmax(3rem, auto);
+            height: minmax(2rem, auto);
             & > a {
                 @include itemAnimate();
-                font-size: 1.55rem;
+                font-size: 1.5rem;
             }
         }
     }
