--- a/src/components/Layout/Navigation/Navigation.module.scss
+++ b/src/components/Layout/Navigation/Navigation.module.scss
@@ -45,7 +45,6 @@
 @media only screen {
     @media (min-width: 412px) and (orientation: landscape) {
         .wrapper {
-            background: purple;
             &[data-open-menu='open'] {
                 & > .menu {
                     height: calc(100dvh - 6.5rem);
@@ -59,7 +58,7 @@
     }
     @media (min-width: 900px) {
         .wrapper {
-            grid-template-rows: repeat(17, 1fr);
+            grid-template-columns: repeat(23, 1fr);
             height: 7rem;
             overflow: visible;
             & > * {
@@ -67,17 +66,19 @@
             }
         }
         .brand {
-            background: black;
-            grid-column: 1/3;
+            grid-column: 1/4;
         }
         .menu {
-            background: orange;
-            grid-column: 3/15;
+            grid-column: 4/23;
             grid-row: 1;
         }
         .settings {
-            background: aqua;
-            grid-column: 15/-1;
+            grid-column: 23/-1;
+        }
+    }
+    @media (min-width: 1440px) {
+        .wrapper {
+            background: lime;
         }
     }
 }
