--- a/src/components/Layout/Navigation/Menu/Submenu/Submenu.module.scss
+++ b/src/components/Layout/Navigation/Menu/Submenu/Submenu.module.scss
@@ -43,4 +43,9 @@
             }
         }
     }
+    @media (min-width: 1550px) {
+        .box {
+            width: 24.5rem;
+        }
+    }
 }
