--- a/src/components/Layout/Navigation/Navigation.module.scss
+++ b/src/components/Layout/Navigation/Navigation.module.scss
@@ -24,7 +24,6 @@
     color: $color;
     grid-column: 1/-1;
     grid-row: 1;
-    margin-bottom: 0.6rem;
     & > a {
         @include flex(center, flex-end, row nowrap, 1rem);
         @include font(1.65rem, 700, 1, null, null, start);
@@ -46,6 +45,8 @@
 
 .brand {
     grid-column: 1/4;
+    grid-row: 1/3;
+    height: 100%;
 }
 
 .settings {
@@ -78,54 +79,44 @@
     @media (min-width: 900px) {
         .wrapper {
             grid-template-columns: repeat(23, 1fr);
-            height: clamp(5rem, 7.5rem, 10rem);
+            grid-template-rows: 2.85rem 7.5rem;
+            height: clamp(5rem, 7.5rem, auto);
             overflow: visible;
         }
 
-        .brand,
-        .menu,
-        .settings {
-            grid-row: 2;
-            height: calc(7.5rem - 1.92rem) !important;
+        .location {
+            grid-column: 3/-1;
+            grid-row: 1;
         }
 
         .brand {
-            grid-column: 1/4;
+            // background: aqua !important;
+            grid-column: 1/3;
+            grid-row: 1/-1;
+            height: 100%;
         }
         .menu {
-            grid-column: 4/23;
+            grid-column: 3/23;
+            height: 100%;
+            // height: 7.5rem;
+            grid-row: 2;
         }
         .settings {
+            // height: 7.5rem;
+            height: 100%;
             grid-column: 23/-1;
+            grid-row: 2;
         }
     }
     @media (min-width: 1440px) {
         .wrapper {
             background-color: rgba($background, 0.7);
-            height: clamp(5rem, 7.75rem, 10rem);
-
+            // height: clamp(5rem, 7.75rem, 10rem);
             &[data-open-menu='close'],
             &[data-open-menu='open'],
             & > * {
                 background-color: rgba($background, 0.7);
             }
-        }
-
-        .brand,
-        .menu,
-        .settings {
-            height: calc(7.75rem - 1.92rem) !important;
-        }
-    }
-    @media (min-width: 1500px) {
-        .wrapper {
-            height: clamp(5rem, 8.15rem, 10rem);
-        }
-
-        .brand,
-        .menu,
-        .settings {
-            height: calc(8.45rem - 1.92rem) !important;
         }
     }
 }
