--- a/src/styles/Variables.scss
+++ b/src/styles/Variables.scss
@@ -1,7 +1,9 @@
 $primary: rgb(253, 0, 0);
 $secondary: rgb(238, 123, 0);
 $tertiary: rgb(31, 31, 31);
-$background: rgb(0, 0, 0);
+$quatenary: rgb(0, 0, 0);
+$quinary: rgb(198, 47, 63);
+$background: rgb(31, 31, 31);
 $color: rgb(255, 255, 255);
 $fontRegural: 'Roboto', sans-serif;
 $fontSpecial: 'Oswald', sans-serif;
