--- a/src/components/Views/Home/About/About.module.scss
+++ b/src/components/Views/Home/About/About.module.scss
@@ -5,13 +5,7 @@
     @include backgroundCover();
     align-items: center;
     justify-items: center;
-    background-image: linear-gradient(
-        to bottom,
-        $background,
-        $background,
-        $background,
-        rgba($primary, 0.2)
-    );
+
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     padding: 4rem 0rem;
@@ -20,6 +14,7 @@
 
 .content {
     grid-column: 1/-1;
+    grid-row: 1;
     width: clamp(5rem, 55rem, 90%);
     & > .title__box {
         & > .title {
@@ -44,21 +39,26 @@
     }
 }
 
-.image__box {
+.image {
     @include flex(center, center);
     aspect-ratio: 4/6;
-    background-color: rgba($primary, 0.6);
+    width: clamp(15rem, 60rem, 92%);
+    position: relative;
     grid-column: 1/-1;
-    max-height: 55rem;
-    transform: translateX(2.2rem) translateY(1.5rem);
-    margin-top: 4rem;
-    width: 74%;
-    & > .image {
+    grid-row: 1;
+    margin: 4rem auto 0rem auto;
+    z-index: 0;
+    &::before {
         @include size(100%, 100%);
-        box-shadow: 2rem -2rem 1rem rgba($quatenary, 0.2);
         position: relative;
-        top: 1.5rem;
-        left: -1.5rem;
+        background-image: linear-gradient(
+            to bottom right,
+            rgba($primary, 0),
+            rgba($primary, 0.2),
+            rgba($primary, 0.55),
+            rgba($primary, 0.4)
+        );
+        z-index: 1;
     }
 }
 
@@ -79,7 +79,7 @@
             }
         }
 
-        .image__box {
+        .image {
             grid-column: 5/-1;
             margin-top: unset;
         }
@@ -109,13 +109,6 @@
 
                 width: 85%;
             }
-        }
-
-        .image__box {
-            aspect-ratio: 4/6;
-            grid-column: 6/-1;
-            padding: 4rem 0rem;
-            max-height: unset;
         }
     }
 }
