--- a/02/src/styles/Variables.scss
+++ b/02/src/styles/Variables.scss
@@ -5,5 +5,7 @@ $quatenary: rgb(0, 0, 0);
 $quinary: rgb(198, 47, 63);
 $background: rgb(31, 31, 31);
 $color: rgb(255, 255, 255);
-$fontRegural: 'Roboto', sans-serif;
-$fontSpecial: 'Oswald', sans-serif;
+$fontAlfa:'Alfa Slab One', serif;
+$fontAnton:'Anton', sans-serif;
+$fontBlackOps:'Black Ops One', serif;
+$fontPoppins:'Poppins', sans-serif;
