--- a/02/src/styles/Global.scss
+++ b/02/src/styles/Global.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Anton&family=Black+Ops+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500&display=swap');
+
 @import './Mixins.scss';
 @import './Variables.scss';
 
@@ -9,7 +10,7 @@
     text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    -webkit-tap-highlight-color: rgba($background, 0);
+    // -webkit-tap-highlight-color: rgba($background, 0);
 }
 
 ::after,
@@ -19,7 +20,7 @@
 }
 
 ::selection {
-    background: rgba($secondary, 0.15);
+    // background: rgba($secondary, 0.15);
 }
 
 :focus,
@@ -41,8 +42,10 @@ button {
 body {
     @include backgroundCover();
     background-color: $background;
-    color: $color !important;
-    font-family: $fontRegural;
+    background: #000;
+    color: #fff;
+    // color: $color !important;
+    font-family: $fontPoppins;
     font-weight: normal;
     font-size: 1.6rem;
     transition: 0.2s linear all;
@@ -53,9 +56,6 @@ html {
     font-size: 62.5%;
 }
 
-h1 {
-    font-family: $fontSpecial;
-}
 
 button,
 input,
