--- a/02/src/components/Utils/Cards/BlogCard/BlogCard.module.scss
+++ b/02/src/components/Utils/Cards/BlogCard/BlogCard.module.scss
@@ -7,6 +7,8 @@
     height: 100%;
     width: 40rem;
     & > figure {
+        border-radius: 1.2rem;
+        overflow: hidden;
         position: relative;
     }
     & > div {
