--- a/02/src/components/Utils/Cards/BlogCard/BlogCard.module.scss
+++ b/02/src/components/Utils/Cards/BlogCard/BlogCard.module.scss
@@ -2,20 +2,20 @@
 @import '../../../../styles/Variables.scss';
 
 .recommended__wrapper {
-    display: grid;
-    grid-template-rows: calc(100% - 25rem) 25rem;
-    height: 100%;
-    width: 30rem;
+    @include size(auto,30rem);
+    border-radius: .72rem;
+    margin: auto;
+    overflow: hidden;
     & > figure {
-        aspect-ratio: 4/3;
-        width: 100%;
-        border-radius: 1.2rem;
+        aspect-ratio: 4/3.2;
         overflow: hidden;
         position: relative;
+        width: 100%;
     }
     & > div {
-        @include flex(flex-start, flex-start, column, null, 1rem);
-        padding: 1rem 1.5rem;
+        @include flex(flex-start, flex-start, column, null, 2rem);
+        background-color: #161616;
+        padding:2.6rem 2.5rem 3rem 2.5rem;
         & > h4 {
             @include font(2.3rem, 600, 1.1, null, null, start);
         }
@@ -39,8 +39,10 @@
 @media only screen {
     @media (min-width: 900px) {
         .recommended__wrapper {
-            margin: auto;
+            margin:0 auto;
             width: clamp(27rem, 47rem, 99%);
+            // margin: 0;
+    // width: 30rem;
         }
     }
 }
