--- a/02/src/styles/Utils.scss
+++ b/02/src/styles/Utils.scss
@@ -1,15 +1,24 @@
 @import "./Variables.scss";
-.box {
-    background: hsl(128, 71%, 48%);
-    viewport-fit: contain;
-    height: 65rem;
-    overflow: hidden;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
 
-    li {
-        background: aqua !important;
+.blog__container {
+    // background: pink;
+    margin:2rem auto 4rem;
+    width:clamp(5rem,125rem,95%);
+    & > ul{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        gap:1rem;
+    }
+    @media only screen {
+        @media (min-width:700px){
+            & > ul {
+                grid-template-columns: repeat(2,1fr);
+            }
+        }
+        @media (min-width:1300px){
+            & > ul {
+                grid-template-columns: repeat(3,1fr);
+            }
+        }
     }
 }
